# TrendRadar

./: .dockerignore  .gitignore  Dockerfile  README.md  config-simple.yaml  docker-compose.yml  frequency_words_simple.txt  main.py  pyproject.toml  readme.md  requirements.txt  yaml_config.py
config/: config-simple.yaml  frequency_words_simple.txt
