[project]
name = "trendradar"
version = "0.1.0"
description = "ðŸ” å¤šå¹³å°çƒ­é—¨æ–°é—»èšåˆå·¥å…·ï¼Œè‡ªåŠ¨æŽ¨é€ä½ å…³æ³¨çš„æ–°é—» - è‡ªåª’ä½“å¾®ä¿¡å…¬ä¼—å·ç­‰æ–°é—»ç±»æ–‡ç« è¾…åŠ©å·¥å…·ï¼Œæ”¯æŒä»Šæ—¥å¤´æ¡ã€ç™¾åº¦çƒ­æœã€å¾®åšã€æŠ–éŸ³ã€çŸ¥ä¹Žã€B ç«™ã€è´¢è”ç¤¾ç­‰11ä¸ªä¸­æ–‡çƒ­é—¨å¹³å°ï¼Œåˆ†æžå…³é”®è¯é¢‘çŽ‡ï¼Œç”ŸæˆæŠ¥å‘Šå¹¶æ”¯æŒå¤šæ¸ é“æ‰‹æœºæŽ¨é€ç­‰ã€‚æŒç»­è¿½è¸ªçƒ­ç‚¹å˜åŒ–ã€‚ðŸ˜Šæ¬¢è¿Žé€šè¿‡ star â­æ”¯æŒå¼€å‘è€…ï¼ŒðŸ˜Žä¸ºä¼Ÿå¤§çš„å¼€æºäº‹ä¸šæ·»ç –åŠ ç“¦ï¼Œå·²æ”¯æŒä¼ä¸šå¾®ä¿¡ï¼Œé£žä¹¦ï¼Œé’‰é’‰ï¼Œtelegramçš„æŽ¨é€æ¸ é“"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "schedule>=1.2.2",
]
